dataset1235/2025-2/1379599236/users/2397405626/executions/2110095464_1934415188.log
== SUBMISSION (2025-08-25 18:35:06)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

distancia = float(input("Digite a distancia percorrida em KM: "))
combustivel = float(input("Informe quantos litros de combustivel foram gastos: "))
consumo = distancia/combustivel

print(round(consumo,3),"Km/l")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 9.802 Km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 2.0 Km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 14.286 Km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 14.286 Km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 18.119 Km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 5.0 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:35:20)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

distancia = float(input("Digite a distancia percorrida em KM: "))
combustivel = float(input("Informe quantos litros de combustivel foram gastos: "))
consumo = distancia/combustivel

print(round(consumo,3),"km/l")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 9.802 km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 2.0 km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 14.286 km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 14.286 km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 18.119 km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 5.0 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:34:35)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

distancia = float(input("Digite a distancia percorrida em KM: "))
combustivel = float(input("Informe quantos litros de combustivel foram gastos: "))
consumo = distancia/combustivel

print(round(consumo,3)" Km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo,3)" Km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo,3)" Km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo,3)" Km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo,3)" Km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo,3)" Km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo,3)" Km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:34:55)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

distancia = float(input("Digite a distancia percorrida em KM: "))
combustivel = float(input("Informe quantos litros de combustivel foram gastos: "))
consumo = distancia/combustivel

print(round(consumo,3),"Km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 9.802 Km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 2.0 Km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 14.286 Km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 14.286 Km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 18.119 Km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Digite a distancia percorrida em KM: Informe quantos litros de combustivel foram gastos: 5.0 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
